--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
 		"astro-seo": "^0.8.4",
 		"prettier": "^3.3.2",
 		"prettier-plugin-astro": "^0.14.0",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"sharp": "^0.33.4"
+		"prettier-plugin-tailwindcss": "^0.6.5"
 	},
 	"prettier": {
 		"tabWidth": 4,
